<resources>
    <string name="app_name">Flashlight Tiramisu</string>
    <string name="add_qs_title">Add QS Title</string>
    <string name="settings">Settings</string>

    <string name="default_value_text" formatted="false">Saved value: %d%%</string>
    <string name="save_as_default_value">Save slider value as default</string>

    <string name="github">My GitHub profile</string>
    <string name="label_main">Control</string>
    <string name="slider_turns_on_the_flashlight">Slider turns on the flashlight</string>
    <string name="auto_set_slider_from_default_value">Set slider to saved value</string>
    <string name="settings_segment_values">Values on Segment Buttons</string>
    <string name="option_1">1% | 25% | 50% | 100%</string>
    <string name="option_2">25% | 50% | 75% | 100%</string>
    <string name="explanation_of_setting_items">Explanation of setting items</string>

    <string name="supporting_text">1. Slider turns on the flashlight - Auto turn on flashlight when slider value/position changes. \n2. Set slider to saved value - Set the slider position to the saved value after turning on the flashlight via button.\n3. Auto turn on flashlight when app starts - The flashlight will automatically turn on when you launch this application.\n4. Selecting segment button values between two options:\n    • 1 option is (1% | 25% | 50% | 100%)\n    • 2 option is (25% | 50% | 75% | 100%)</string>
    <string name="dialog_options">Value variations on Segment Buttons</string>
    <string name="accept">OK</string>
    <string name="decline">Copy text</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="device_not_support">Device not support</string>
    <string name="exit_the_application">Exit the application</string>

    <string name="tile_title">Flashlight</string>
    <string name="tile_subtitle_saved_brightness" formatted="false">Saved: %d%%</string>
    <string name="tile_subtitle_application_launched">Application launched</string>
    <string name="auto_turn_on_flashlight_when_app_starts">Auto turn on flashlight when app starts</string>
</resources>
