<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:menu="@menu/settings_top_app_bar"
            app:navigationIcon="@drawable/back_24"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/label_main"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="28dp"
        android:text="@string/label_main"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_settings" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/settings_switch_auto_flashlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp"
        android:text="@string/slider_turns_on_the_flashlight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_main" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/settings_auto_slider_from_default_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp"
        android:text="@string/auto_set_slider_from_default_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_switch_auto_flashlight" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/settings_auto_turn_on_open_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp"
        android:text="@string/auto_turn_on_flashlight_when_app_starts"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_auto_slider_from_default_value" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_auto_turn_on_open_app">

        <TextView
            android:id="@+id/settings_switch_segment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:text="@string/settings_segment_values"
            android:textColor="?android:attr/textColorPrimaryDisableOnly"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_switch_auto_flashlight" />

        <TextView
            android:id="@+id/settings_switch_segment_button_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingBottom="12dp"
            android:text="@string/option_1"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_switch_segment_button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/explanation_of_settings"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/explanation_of_setting_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
